<resources>
    <string name="app_name">iValue_Clock</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="btn_start">立即使用</string>

    <!--打卡选项-->
    <string name="nav_main">主页</string>
    <string name="nav_record_list">打卡记录</string>

    <!---->
    <string name="nav_management">管理设置</string>
    <string name="nav_user_info">个人信息</string>
    <string name="nav_settings">设置</string>

    <string name="btn_start_locate">开始定位</string>
    <string name="btn_stop_locate">停止定位</string>
    <string name="btn_record">手动记录位置</string>
    <string name="tv_status">正在定位中</string>
    <string name="tv_title">标题</string>
    <string name="title_activity_login">Sign in</string>

    <string name="btn_login">登录</string>
    <string name="tv_username_hint">请输入您的ID/手机号</string>
    <string name="ev_password">请输入您的密码</string>

    <string name="error_no_username">请填写正确的账号ID或手机号)</string>
    <string name="error_no_password">请输入正确格式的密码</string>
    <string name="error_wrong_info">错误的用户名或者密码！</string>


    <string name="et_description">请输入该WiFi区域描述</string>
    <string name="btn_collect">确定录入</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">请输入您的账号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
