<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_clock_house"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_clock_list"
            android:title="@string/nav_record_list" />
    </group>

    <item
        android:id="@+id/mange"
        android:title="@string/nav_management">
        <menu>
            <item
                android:id="@+id/nav_user_info"
                android:icon="@drawable/ic_manage_user_info"
                android:title="@string/nav_user_info" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_manage_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
